--- a/styles.css
+++ b/styles.css
@@ -81,3 +81,18 @@ p {
     border: 6px dashed red;
     animation: false 400ms forwards;
 }
+
+nav {
+    position: fixed;
+    background: black;
+    width: 100%;
+    height: 50px;
+    top: -50px;
+    transition: 500ms;
+}
+ul {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 0;
+}
