--- a/styles.css
+++ b/styles.css
@@ -96,3 +96,9 @@ ul {
     align-items: center;
     padding: 0;
 }
+input, select {
+    margin: 0 20px 0 20px;
+}
+label {
+    margin-left: -15px;
+}
